--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ Hacktoberfest2020 | Darsh2001
 <ol type=1><font size=5>
  <!--- Add your details here --->
 <li>Darsh Gupta- <a href="https://github.com/Darsh2001"> GitHub Link</a>
+<li>Deepak Rathore- <a href="https://github.com/DeepakRathore2k1"> GitHub Link</a>
 <li>Sakshi Gupta- <a href="https://github.com/sakshigupta06"> GitHub Link</a>
 <li>Pranjal Gupta- <a href="https://github.com/pranjal36"> GitHub Link</a>
 <li>Utsav Tiwari- <a href="https://github.com/Utsav8126"> GitHub Link</a>
